Directories containing initial files for virtual servers (like /etc/skel) are now included in Virtualmin template backups.
---- Changes since 3.65 ----
Added API commands to create, modify, delete and extract settings from virtual server templates.
Updated the phpMyAdmin script installer to version 3.1.2, TextPattern to 4.0.8, Magento to 1.2.1, Typo to 5.2, Moodle to 1.9.4 and 1.7.7, phpList to 2.10.9, SugarCRM to 5.2.0a, WordPress MU to 2.7, Horde Webmail to 1.2.2, Horde to 3.3.3, IMP to 4.3.3, OpenX to 2.6.4, ZenPhoto to 1.2.3, Zikula to 1.1.1, Coppermine to 1.4.20, SMF to 1.1.8, and phpMyFAQ to 2.0.11.
Added the info.pl command line script, for dumping general information about Virtualmin.
Links to per-domain SpamAssassin configurations now include the domain's config file, which allows each domain's settings to be separately managed.
Automatic spam and virus folder clearing now respects custom folder names.
When a domain is restore on a system with a different Apache log file location, its virtualhost is updated to use the target system's paths.
Add parameters to the modify-dns.pl command-line API to add and remove DNS records for multiple domains at once.
Added the get-dns.pl command-line script to dump DNS records for a virtual server.
External web, DNS and mail connectivity for virtual servers can now be checked by Virtualmin, to diagnose common networking and configuration problems.
Moved the field for setting the external IP address (typically for use in DNS records) from the DNS Options page to Edit Virtual Server.
Moved the --dns-ip and --no-dns-ip options from the modify-dns.pl API script to modify-domain.pl and create-domain.pl.
The default TTL for DNS domains (set using the $ttl line in the zone file) can now be configured in server templates.
Added commands to be run before and after scheduled backups, settable on the Edit Scheduled Backup page.
Added an option to the Script Installers page to deny access to new script types by default.