@@ -62,9 +62,5 @@
 	- Concurrent with v4, so that a domain can also have a v6 address
 	- Use in DNS, Apache
 
- - S3 and europe
-	- Fix redirects in restores
-	- Remove STDERR debugging
-
  - AWstats plugin improvements for configuration
 	- FS#5199 
