@@ -1054,3 +1054,4 @@ Moved the --dns-ip and --no-dns-ip options from the modify-dns.pl API script to 
 The default TTL for DNS domains (set using the $ttl line in the zone file) can now be configured in server templates.
 Added commands to be run before and after scheduled backups, settable on the Edit Scheduled Backup page.
 Added an option to the Script Installers page to deny access to new script types by default.
+Backups and restores to S3 buckets in Europe are now fully supported.
